refining and adding java files